force-app/main/default/objects/Chat_Message__c/Chat_Message__c.object-meta.xml
<CustomObject>
    <label>Chat_Message</label>
    <nameField>
        <label>Chat_Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chat_Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>