force-app/main/default/objects/Chat_Message__c/fields/Author_User__c.field-meta.xml
<CustomField>
    <fullName>Author_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author_User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Chat_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>