force-app/main/default/objects/Chat_Message__c/fields/Mensagem_Meta__c.field-meta.xml
<CustomField>
    <fullName>Mensagem_Meta__c</fullName>
    <label>Mensagem_Meta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>