force-app/main/default/objects/Chat_Message__c/fields/Status_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Status_Delivery__c</fullName>
    <label>Status_Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Falha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>